--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,4 @@ spring.jpa.show-sql=true
 #hibernate is what spring JPA is build on top of - so ifd you're trying debug spring JPA you may have to look at
 #hibernate resources
 #create - drops and recreates, none, update - alters tables, validate - throws error if mismatch
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
